--- a/index.css
+++ b/index.css
@@ -1,22 +1,111 @@
 
-.Container {
-    position: absolute;
+.card{
+    position: relative;
     width: 270px;
     height: 380px;
-    left: 120px;
-    top: 120px;
-}
+    margin: auto;
+    margin-top: 20px;
 
-.Card {
-    position: absolute;
-    width: 270px;
-    height: 380px;
-    left: 120px;
-    top: 120px;
-    
     background: #FFFFFF;
     border: 1px solid #E1E2E3;
     box-sizing: border-box;
     box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.154693);
     border-radius: 3px;
 }
+
+@media only screen and (max-width: 275px) { 
+    .card{
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.card-body{
+    padding: 24px 25px 25px 25px;
+}
+
+.accent{
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    height: 3px;
+    background: #F55423;
+    z-index: 1;
+}
+
+.image-container{
+    position: relative;
+    height: 156px;
+    overflow: hidden;
+}
+
+.image{
+    object-fit: contain;
+    object-position: 50% 50%;
+    border-radius: 3px 3px 0px 0px;
+}
+
+.date{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 10px;
+    line-height: 14px;
+    letter-spacing: 0.5px;
+    color: #9B9B9B;
+}
+
+.title{
+    font-family: Open Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0px;
+    text-align: left;
+    margin-bottom: 15px;
+}
+
+.text{
+    font-family: Merriweather;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 18px;
+    color: #4A4A4A;
+    margin-bottom: 12px;
+}
+
+.card-link{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 10px;
+    line-height: 14px;
+    color: #F55423;
+    text-decoration: none;
+    margin-bottom: 12px;
+    padding-bottom: 12px;
+    cursor: pointer;
+}
+
+.card-link:hover {
+    color: rgb(213, 88, 71);
+}
+
+.card-link:hover > svg {
+    transform: translateX(3px);
+    transition: color 300ms ease 0s, transform 300ms ease-out 0s;
+    color: rgb(213, 88, 71);
+}
+
+.card-link > svg {
+    transition: color 300ms ease 0s, transform 300ms ease-in 0s;
+}
+
+
+p {
+    margin: 0;
+    padding: 0;
+}
+
