--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
     width: 270px;
     height: 380px;
     margin: auto;
-    margin-top: 20px;
+    margin-top: 50px;
 
     background: #FFFFFF;
     border: 1px solid #E1E2E3;
@@ -37,12 +37,14 @@
     position: relative;
     height: 156px;
     overflow: hidden;
+    /* clip: rect(0, 100px, 200px, 0); */
+    border-radius: 3px 3px 0px 0px;
 }
 
 .image{
-    object-fit: contain;
-    object-position: 50% 50%;
-    border-radius: 3px 3px 0px 0px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .date{
@@ -102,7 +104,6 @@
 .card-link > svg {
     transition: color 300ms ease 0s, transform 300ms ease-in 0s;
 }
-
 
 p {
     margin: 0;
